--- a/index.html
+++ b/index.html
@@ -196,6 +196,45 @@
                           <!--  BADGE -->
                                 <span class="badge rounded-pill bg-secondary p-1"  style="margin:10px">New Jobs</span>
                                   <!--  BADGE -->
+                                   <a href="SubPages/2024/January/DetailsPages/OdishaAnganwadiRecruit.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/OdishaAnganwadi.jpg" alt=""
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Odisha Anganwadi Recruit..</h6>
+                                        <p>Anganwadi Helper, Teacher, Supervisor Post</p>
+
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="SubPages/2024/January/DetailsPages/CISFASIRecruitment.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/CISF-ASI.jpg" alt=""
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>CISF ASI Recruitment</h6>
+                                        <p>836 Assistant Sub-inspector Posts</p>
+
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="SubPages/2024/January/DetailsPages/OSAPIRBRecruitment.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/OSAP-IRB.jpg" alt=""
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>OSAP IRB Recruitment</h6>
+                                        <p>For 1513 Posts ! 10th Pass</p>
+
+                                    </div>
+                                </div>
+                            </a>
                                   <a href="SubPages/2024/January/DetailsPages/RRBGroupD.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
