--- a/index.html
+++ b/index.html
@@ -196,6 +196,19 @@
                           <!--  BADGE -->
                                 <span class="badge rounded-pill bg-secondary p-1"  style="margin:10px">New Jobs</span>
                                   <!--  BADGE -->
+                                 <a href="SubPages/2024/January/DetailsPages/OdishaMaitriRecruitment.html" class="nav-link ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/OdishaImage.png" alt=""
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Odisha Panchayat Maitri</h6>
+                                        <p>For 2000+ Posts </p>
+
+                                    </div>
+                                </div>
+                            </a>
                                  <a href="SubPages/2024/January/DetailsPages/OdishaDEORecruitment.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
