--- a/index.html
+++ b/index.html
@@ -196,6 +196,19 @@
                           <!--  BADGE -->
                                 <span class="badge rounded-pill bg-secondary p-1"  style="margin:10px">New Jobs</span>
                                   <!--  BADGE -->
+                                <a href="SubPages/2024/January/DetailsPages/ZillaSwaysta.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/ZillaSwaysta.jpg" alt=""
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Zilla Swasthya Samiti Recru..</h6>
+                                        <p style=" margin-bottom: 0;">For Accountant & Assistant Post</p>
+                                        <p class="currentDate" style="font-size: 12px;" class="text-muted"></p>
+                                    </div>
+                                </div>
+                            </a>
                                  <a href="SubPages/2024/January/DetailsPages/OdishaBlockLevelBPM.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
