--- a/index.html
+++ b/index.html
@@ -196,19 +196,73 @@
                           <!--  BADGE -->
                                 <span class="badge rounded-pill bg-secondary p-1"  style="margin:10px">New Jobs</span>
                                   <!--  BADGE -->
-                                <a href="SubPages/2024/January/DetailsPages/ZillaSwaysta.html" class="nav-link detailsLink ">
+                                    <a href="SubPages/2024/January/DetailsPages/ISROURSCRecruitment.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/ISROURSCRecruitment.jpg" alt=""
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>ISRO URSC Recruitment</h6>
+                                        <p>Apply Online For Variou..</p>
+                                        <p class="currentDate" style="font-size: 12px;" class="text-muted"></p>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="SubPages/2024/January/DetailsPages/OdishaMissionShakti.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/MissionShakti.jpg" alt=""
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Odisha Mission Shakti</h6>
+                                        <p>21,700 Per Month</p>
+                                        <p class="currentDate" style="font-size: 12px;" class="text-muted"></p>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="SubPages/2024/January/DetailsPages/SchoolPeon.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/SchoolPeon.jpg" alt=""
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Odisha School Peon Recruit..</h6>
+                                        <p>10th Pass Apply Offline</p>
+                                        <p class="currentDate" style="font-size: 12px;" class="text-muted"></p>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="SubPages/2024/January/DetailsPages/AirportRecruitment2024.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/January/images/AiportRequirment.jpg" alt=""
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Airport Recruitment 2024</h6>
+                                        <p> Salary 24,960 Per Month</p>
+                                        <p class="currentDate" style="font-size: 12px;" class="text-muted"></p>
+                                    </div>
+                                </div>
+                            </a>
+
+                            <a href="SubPages/2024/January/DetailsPages/ZillaSwaysta.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
                                         <img src="SubPages/2024/January/images/ZillaSwaysta.jpg" alt=""
                                             height="50px" width="50px">
                                     </div>
                                     <div class="secondBoundary">
-                                        <h6>Zilla Swasthya Samiti Recru..</h6>
-                                        <p style=" margin-bottom: 0;">For Accountant & Assistant Post</p>
+                                        <h6 ">Zilla Swasthya Samiti Recru..</h6>
+                                        <p >For Accountant & Assistant Post</p>
                                         <p class="currentDate" style="font-size: 12px;" class="text-muted"></p>
                                     </div>
                                 </div>
                             </a>
+
                                  <a href="SubPages/2024/January/DetailsPages/OdishaBlockLevelBPM.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
