--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                           <!--  BADGE -->
                                 <span class="badge rounded-pill bg-secondary p-1"  style="margin:10px">New Jobs</span>
                                   <!--  BADGE -->
-                                    <a href="SubPages/2024/January/DetailsPages/ISROURSCRecruitment.html" class="nav-link detailsLink ">
+                                    <a href="SubPages/2024/January/DetailsPages/ISROURSCRecruitment.html" class="nav-link">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
                                         <img src="SubPages/2024/January/images/ISROURSCRecruitment.jpg" alt=""
@@ -209,7 +209,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="SubPages/2024/January/DetailsPages/OdishaMissionShakti.html" class="nav-link detailsLink ">
+                            <a href="SubPages/2024/January/DetailsPages/OdishaMissionShakti.html" class="nav-link ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
                                         <img src="SubPages/2024/January/images/MissionShakti.jpg" alt=""
@@ -222,7 +222,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="SubPages/2024/January/DetailsPages/SchoolPeon.html" class="nav-link detailsLink ">
+                            <a href="SubPages/2024/January/DetailsPages/SchoolPeon.html" class="nav-link">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
                                         <img src="SubPages/2024/January/images/SchoolPeon.jpg" alt=""
@@ -235,7 +235,7 @@
                                     </div>
                                 </div>
                             </a>
-                            <a href="SubPages/2024/January/DetailsPages/AirportRecruitment2024.html" class="nav-link detailsLink ">
+                            <a href="SubPages/2024/January/DetailsPages/AirportRecruitment2024.html" class="nav-link">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
                                         <img src="SubPages/2024/January/images/AiportRequirment.jpg" alt=""
@@ -249,7 +249,7 @@
                                 </div>
                             </a>
 
-                            <a href="SubPages/2024/January/DetailsPages/ZillaSwaysta.html" class="nav-link detailsLink ">
+                            <a href="SubPages/2024/January/DetailsPages/ZillaSwaysta.html" class="nav-link">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
                                         <img src="SubPages/2024/January/images/ZillaSwaysta.jpg" alt=""
