--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <!-- Nav Bar-->
+    <!---- Nav Bar---->
     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
             <!-- Sidebar Toggle Button Inside the Navbar -->
