--- a/index.html
+++ b/index.html
@@ -196,6 +196,8 @@
                           <!--  BADGE -->
                                 <span class="badge rounded-pill bg-secondary p-1"  style="margin:10px">New Jobs</span>
                                   <!--  BADGE -->
+
+<!-- Anchor tags -->
                                     <a href="SubPages/2024/January/DetailsPages/ISROURSCRecruitment.html" class="nav-link">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
