--- a/index.html
+++ b/index.html
@@ -198,6 +198,32 @@
                                   <!--  BADGE -->
 
 <!-- Anchor tags -->
+                                 <a href="SubPages/2024/February/OdishaVLW.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/February/naveenPattnayak.jpg" alt=""January
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Odisha VLW Recruitment</h6>
+                                        <p>For 1200+ Posts</p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="SubPages/2024/February/SSCSelectionPostPhase12.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/February/SSCSelectionPostPhase12.jpg" alt=""January
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>SSC Selection Post </h6>
+                                        <p>Phase 12 For 5369 Posts</p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
                                     <a href="SubPages/2024/January/DetailsPages/ISROURSCRecruitment.html" class="nav-link">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
