--- a/index.html
+++ b/index.html
@@ -198,6 +198,19 @@
                                   <!--  BADGE -->
 
 <!-- Anchor tags -->
+                                <a href="SubPages/2024/February/ICAR-NRRICuttackRecruitment2024.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/February/ICAR-NRRICuttackRecruitment2024.jpg" alt=""January
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>ICAR-NRRI Cuttack Recruit..</h6>
+                                        <p>Graduat Assistant Post</p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
                                  <a href="SubPages/2024/February/OdishaVLW.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
