--- a/index.html
+++ b/index.html
@@ -198,6 +198,19 @@
                                   <!--  BADGE -->
 
 <!-- Anchor tags -->
+                                   <a href="SubPages/2024/February/OdishaPanchayatDEO.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/February/OdishaImage.png" alt=""January
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Odisha Panchayat DEO Recru..</h6>
+                                        <p>Data Entry Operator </p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
                                 <a href="SubPages/2024/February/ICAR-NRRICuttackRecruitment2024.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
