--- a/index.html
+++ b/index.html
@@ -198,6 +198,19 @@
                                   <!--  BADGE -->
 
 <!-- Anchor tags -->
+                                  <a href="SubPages/2024/February/OdishaAnganwadiRecruitment.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/February/OdishaAnganwadiRecruitment.jpg" alt=""January
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Odisha Anganwadi Recruit.. </h6>
+                                        <p>Helper, Worker & Teacher Po..</p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
                                    <a href="SubPages/2024/February/DSSSBMTSRecruitment.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
