--- a/index.html
+++ b/index.html
@@ -198,6 +198,20 @@
                                   <!--  BADGE -->
 
 <!-- Anchor tags -->
+                                 <a href="SubPages/2024/February/OdishaAdarshaVidyalaya.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/February/OdishaAdarshaVidyalaya.jpg" alt=""January
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>(OAVS) Recruitment 2024</h6>
+                                        <p>For Warden & Peon Post</p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
+                         
                                   <a href="SubPages/2024/February/OdishaAnganwadiRecruitment.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
