--- a/index.html
+++ b/index.html
@@ -198,6 +198,19 @@
                                   <!--  BADGE -->
 
 <!-- Anchor tags -->
+                                  <a href="SubPages/2024/February/StateBankOfIndiaSBI.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/February/StateBankOfIndiaSBI.jpg" alt=""January
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>State Bank Of India SBI Recr..</h6>
+                                        <p>Salary 63,840 Per Month</p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
                                  <a href="SubPages/2024/February/OdishaAdarshaVidyalaya.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
