--- a/index.html
+++ b/index.html
@@ -198,6 +198,19 @@
                                   <!--  BADGE -->
 
 <!-- Anchor tags -->
+                                   <a href="SubPages/2024/February/OdishaForestDepartment.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/February/OdishaForestDepartment.jpg" alt=""January
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Odisha Forest Department</h6>
+                                        <p>For Accountant Post </p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
                                   <a href="SubPages/2024/February/StateBankOfIndiaSBI.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
