--- a/index.html
+++ b/index.html
@@ -198,6 +198,32 @@
                                   <!--  BADGE -->
 
 <!-- Anchor tags -->
+                                 <a href="SubPages/2024/February/OdishaSamagraShikshaAbhiyan.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/February/naveenPattnayak.jpg" alt=""January
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Odisha Samagra Shiksha Abh.</h6>
+                                        <p>For Teacher, Accountant & pe.</p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="SubPages/2024/February/OdishaBlockLevelGovt.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/February/OdishaImage.png" alt=""January
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Odisha Block Level Govt</h6>
+                                        <p>Salary Upto 39,000 Per Month </p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
                                    <a href="SubPages/2024/February/OdishaForestDepartment.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
