--- a/index.html
+++ b/index.html
@@ -198,6 +198,19 @@
                                   <!--  BADGE -->
 
 <!-- Anchor tags -->
+                                <a href="SubPages/2024/February/OdishaTahasilOffice.html" class="nav-link detailsLink ">
+    <div class="firstBoundry">
+        <div class="secondBoundary">
+            <img src="SubPages/2024/February/OdishaImage.png" alt=""January
+                height="50px" width="50px">
+        </div>
+        <div class="secondBoundary">
+            <h6>Odisha Tahasil Office Recr..</h6>
+            <p>Salary 33,100 Per Month</p>
+            
+        </div>
+    </div>
+</a>
                                  <a href="SubPages/2024/February/OdishaSamagraShikshaAbhiyan.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
