--- a/index.html
+++ b/index.html
@@ -198,6 +198,19 @@
                                   <!--  BADGE -->
 
 <!-- Anchor tags -->
+                                 <a href="SubPages/2024/February/OdishaPoliceNew.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/February/OdishaPoliceNew.jpg" alt=""January
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Odisha Samagra Shiksha Abh.</h6>
+                                        <p>For Teacher, Accountant & pe.</p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
                                 <a href="SubPages/2024/February/OdishaTahasilOffice.html" class="nav-link detailsLink ">
     <div class="firstBoundry">
         <div class="secondBoundary">
