--- a/index.html
+++ b/index.html
@@ -205,8 +205,8 @@
                                             height="50px" width="50px">
                                     </div>
                                     <div class="secondBoundary">
-                                        <h6>Odisha Samagra Shiksha Abh.</h6>
-                                        <p>For Teacher, Accountant & pe.</p>
+                                        <h6>Odisha Police New Recruitment</h6>
+                                        <p>Salary Upto 63,200 </p>
                                         
                                     </div>
                                 </div>
