--- a/index.html
+++ b/index.html
@@ -198,6 +198,19 @@
                                   <!--  BADGE -->
 
 <!-- Anchor tags -->
+                                      <a href="SubPages/2024/February/OdishaAgricultureOffice.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/February/OdishaAgricultureOffice.jpg" alt=""January
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6>Odisha Agriculture Office Rec..</h6>
+                                        <p>Salary 49,000 Per Month</p>
+                                        
+                                    </div>
+                                </div>
+                            </a>
                                  <a href="SubPages/2024/February/OdishaPoliceNew.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
