--- a/index.html
+++ b/index.html
@@ -200,6 +200,32 @@
 <!-- Anchor tags -->
                                 
 <!-- march -->
+                                  <a href="SubPages/2024/March/OSSCTrafficConstable.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/March/OSSCTrafficConstable.jfif" alt="" January
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6 style="margin-bottom: 0px;">OSSC Traffic Constable Recru...</h6>
+                                        <p style="margin-bottom: 0px;">12th Pass Apply Online </p>
+                                        <p style="font-size: 12px;margin-bottom: 0px;">15-March-2024</p>
+                                    </div>
+                                </div>
+                            </a>
+                            <a href="SubPages/2024/March/OdishaSchoolTeacher.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/March/Odisha School Teacher.jfif" alt="" January
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6 style="margin-bottom: 0px;">Odisha School Teacher, Peon a..</h6>
+                                        <p style="margin-bottom: 0px;">10th,12th,+3 Pass Free </p>
+                                        <p style="font-size: 12px;margin-bottom: 0px;">15-March-2024</p>
+                                    </div>
+                                </div>
+                            </a>
                                  <a href="SubPages/2024/March/IndianRailwayRRB.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
