--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@
 <!-- Anchor tags -->
                                 
 <!-- march -->
+                                 <a href="SubPages/2024/March/OSSCCGLRecruitment.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/March/OdishaImage.png" alt="" January
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6 style="margin-bottom: 0px;">OSSC CGL Recruitment </h6>
+                                        <p style="margin-bottom: 0px;">GST Officer, Auditor And Inspe..</p>
+                                        <p style="font-size: 12px;margin-bottom: 0px;">18-March-2024</p>
+                                    </div>
+                                </div>
+                            </a>
                                   <a href="SubPages/2024/March/OSSCTrafficConstable.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
