--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@
 <!-- Anchor tags -->
                                 
 <!-- march -->
+                                  <a href="SubPages/2024/March/OPTCLRecruitment.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/March/OPTCL-Recruitment-2022.webp" alt="" 
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6 style="margin-bottom: 0px;">OPTCL Recruitment 2024</h6>
+                                        <p style="margin-bottom: 0px;">Apply Online For 350 Posts</p>
+                                        <p style="font-size: 12px;margin-bottom: 0px;">20-March-2024</p>
+                                    </div>
+                                </div>
+                            </a>
                                 <a href="SubPages/2024/March/Odisha SSB Junior Assistant.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
