--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@
 <!-- Anchor tags -->
                                 
 <!-- march -->
+                                 <a href="SubPages/2024/March/DSSSB10thPassVacancy2024.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/March/DSSSB 10thPassVacanc 2024.jpg" alt="" 
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6 style="margin-bottom: 0px;">DSSSB 10th Pass Vacancy 2024</h6>
+                                        <p style="margin-bottom: 0px;">Salary 21,700 Per Month</p>
+                                        <p style="font-size: 12px;margin-bottom: 0px;">22-March-2024</p>
+                                    </div>
+                                </div>
+                            </a>
                                   <a href="SubPages/2024/March/IndianPostalPaymentBank.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
