--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@
 <!-- Anchor tags -->
                                 
 <!-- march -->
+                                <a href="SubPages/2024/March/UtkalBalashramRecruitment.html" class="nav-link detailsLink ">
+    <div class="firstBoundry">
+        <div class="secondBoundary">
+            <img src="SubPages/2024/March/UtkalBalashramRecruitment.jpg" alt=""January
+                height="50px" width="50px">
+        </div>
+        <div class="secondBoundary">
+            <h6 style="margin-bottom: 0px;">Rourkela Steel Plant Recr..</h6>
+            <p style="margin-bottom: 0px;">Salary 33,100 Per Month</p>
+            <p style="font-size: 12px;margin-bottom: 0px;">23-March-2024</p>
+        </div>
+    </div>
+</a>
                                  <a href="SubPages/2024/March/DSSSB10thPassVacancy2024.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
