--- a/index.html
+++ b/index.html
@@ -233,8 +233,8 @@
                                             height="50px" width="50px">
                                     </div>
                                     <div class="secondBoundary">
-                                        <h6 style="margin-bottom: 0px;">Indian Postal Payment Bank IPPB</h6>
-                                        <p style="margin-bottom: 0px;">Apply Online For Executive Post</p>
+                                        <h6 style="margin-bottom: 0px;">Indian Postal Payment Bank</h6>
+                                        <p style="margin-bottom: 0px;">Apply Online For Executive p..</p>
                                         <p style="font-size: 12px;margin-bottom: 0px;">21-March-2024</p>
                                     </div>
                                 </div>
