--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
     <!---- Nav Bar---->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg  bg-danger-subtle sticky-top">
         <div class="container-fluid">
             <!-- Sidebar Toggle Button Inside the Navbar -->
             <button id="sidebarToggle" class="btn btn-light d-md-none navbar-toggler">
