--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@
 <!-- Anchor tags -->
                                 
 <!-- march -->
+                                  <a href="SubPages/2024/March/NavodayaVidyalayaSamitiNVS.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/March/NavodayaVidyalayaSamitiNVSRecruitment 2024.jpg" alt="" 
+                                            height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6 style="margin-bottom: 0px;">Navodaya Vidyalaya Samiti NVS</h6>
+                                        <p style="margin-bottom: 0px;">For 1234 Non Teaching Post </p>
+                                        <p style="font-size: 12px;margin-bottom: 0px;">27-March-2024</p>
+                                    </div>
+                                </div>
+                            </a>
                                 <a href="SubPages/2024/March/UtkalBalashramRecruitment.html" class="nav-link detailsLink ">
     <div class="firstBoundry">
         <div class="secondBoundary">
