--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@
 <!-- Anchor tags -->
                                 
 <!-- march -->
+                                <a href="SubPages/2024/March/FlipkartWorkFromHome.html" class="nav-link detailsLink ">
+    <div class="firstBoundry">
+        <div class="secondBoundary">
+            <img src="SubPages/2024/March/FlipkartWorkFromHome.jpg" alt=""January
+                height="50px" width="50px">
+        </div>
+        <div class="secondBoundary">
+            <h6 style="margin-bottom: 0px;">Flipkart Work From Home Jobs</h6>
+            <p style="margin-bottom: 0px;">10th,12th Pass</p>
+            <p style="font-size: 12px;margin-bottom: 0px;">30-March-2024</p>
+        </div>
+    </div>
+</a>
                                    <a href="SubPages/2024/March/SouthEastCentralRailway.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
