--- a/index.html
+++ b/index.html
@@ -200,6 +200,19 @@
 <!-- Anchor tags -->
                                 
 <!-- march -->
+                                  <a href="SubPages/2024/April/OdishaAminPostRecruitment.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/April/OdishaImage.png" alt="" 
+                                        height="50px" width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6 style="margin-bottom: 0px;">Odisha Amin Post Recrui..</h6>
+                                        <p style="margin-bottom: 0px;">Apply Online For 600+ Posts</p>
+                                        <p style="font-size: 12px;margin-bottom: 0px;">03-April-2024</p>
+                                    </div>
+                                </div>
+                            </a>
                                  <a href="SubPages/2024/April/OSSCATORecruitment.html" class="nav-link detailsLink ">
                                 <div class="firstBoundry">
                                     <div class="secondBoundary">
