--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <!-- content-->
             <main class="col-md-9 col-lg-10 items-container mt-3">
                 <div id="liveTime" class="text-muted"></div>
-<marquee  style="color:blue" behavior="scroll" direction="left"><h4>           Happy New Year 2024</h4></marquee>
+ <!--<marquee  style="color:blue" behavior="scroll" direction="left"><h4>           Happy New Year 2024</h4></marquee>-->
 
 
 
@@ -234,7 +234,7 @@
                                     </div>
                                     <div class="secondBoundary">
                                         <h6 style="margin-bottom: 0px;">OSSC ATO Recruitment 2024</h6>
-                                        <p style="margin-bottom: 0px;">250 Assistant Training Officer Post</p>
+                                        <p style="margin-bottom: 0px;">250 Assistant Training Officer</p>
                                         <p style="font-size: 12px;margin-bottom: 0px;">02-April-2024</p>
                                     </div>
                                 </div>
