--- a/index.html
+++ b/index.html
@@ -198,6 +198,22 @@
                                   <!--  BADGE -->
 
 <!-- Anchor tags -->
+
+                                 <!-- August -->
+                            <a href="SubPages/2024/August/UtkalBalashramAngul.html" class="nav-link detailsLink ">
+                                <div class="firstBoundry">
+                                    <div class="secondBoundary">
+                                        <img src="SubPages/2024/April/OdishaImage.png" alt="" height="50px"
+                                            width="50px">
+                                    </div>
+                                    <div class="secondBoundary">
+                                        <h6 style="margin-bottom: 0px;">Utkal Balashram Angul Recr..</h6>
+                                        <p style="margin-bottom: 0px;">Apply Online For Various Posts</p>
+                                        <p style="font-size: 12px;margin-bottom: 0px;">12-August-2024</p>
+                                    </div>
+                                </div>
+                            </a>
+                            <!-- August -->
                                 
 <!-- march -->
                                  <a href="SubPages/2024/April/OSSCCGLRecruitment.html" class="nav-link detailsLink ">
